--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "less-middleware": "^2.2.0",
+    "mongoose": "^4.11.3",
     "morgan": "~1.7.0",
+    "passport-facebook": "^2.1.1",
+    "passport-github": "^1.1.0",
+    "passport-google": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pug": "^2.0.0-beta11",
-    "serve-favicon": "~2.3.2",
-    "less-middleware": "^2.2.0"
+    "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
